# net-dev-ssh-shell

./: .gitattributes  .gitignore  COPYING  LICENSE.txt  README.md  pyproject.toml  requirements.txt
netdevsshshell/: __init__.py  devicetype.py  netdevsshshell.py
netdevsshshell/regex/: _regex.cp37-win_amd64.pyd  _regex.cp38-win_amd64.pyd  _regex.cp39-win_amd64.pyd
netdevsshshell/regex-2021.4.4.dist-info/: RECORD  direct_url.json
testing/: ndsstesting.py
tests/: README.md  netdevsshshelltest.py  netdevsshshelltest.sh
